添加安全验证要求